azure-terraform/aks-resources/aks-ingress/003-ingress-context-path-base-routing/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: leonardtia/tia:website
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-nodeport-service
  labels:
    app: website
    imagePullPolicy: Always
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 80
